Add accessibility and landing page

--- a/speech-to-voice-application/src/App.css
+++ b/speech-to-voice-application/src/App.css
@@ -164,7 +164,7 @@ input::placeholder {
 
 .conversation-placeholder {
   font-style: italic;
-  color: grey;
+  color: #505050;
 }
 
 .conversation-item {
